# SAM

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
sam/: __init__.py  __main__.py  cli.py  config.py  context.py  instructions.py  permissions.py
sam/agent/: condensation.py  history.py  loop.py  planner.py  subagent.py
sam/models/: provider.py  registry.py  streaming.py  tool_protocol.py
sam/prompts/: plan_mode.md  system.md
sam/repo/: graph.py  languages.py  mapper.py  tags.py
sam/session/: manager.py  storage.py
sam/skills/: __init__.py  registry.py
sam/tools/: ask_user.py  background.py  base.py  checkpoint.py  directory.py  file_edit.py  file_read.py  file_write.py  git.py  glob_tool.py  grep_tool.py  memory_tool.py  shell.py  web_fetch.py  web_search.py
sam/ui/: console.py  display.py  prompt.py  spinner.py  tui.py
tests/: conftest.py  test_agent_loop.py  test_config.py  test_file_edit.py  test_tools.py
